--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p >I'm ASAD.<br>
             Glad to see you!</p>
         </b>
-        <div class="description">I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
+        <div class="my-description">I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
         <div class="social-media">
             <div class="supporting-text">
             <div class="lets-connect">LET'S CONNECT</div>
@@ -28,5 +28,123 @@
             </div>
         <img src="./icons/social media icons.svg" alt="Social Media Icons" class="social-media-icons">
     </div>
+    <section class="work-section">
+        <div class="card">
+            <img src="./icons/Snapshoot Portfolio.svg" alt="portfolio" class="snapshot-portfoio">
+            <div class="left-block">
+                <h1 class="project-title">Tonic</h1>
+                <ul class="project-detail">
+                    <li>CANOPY</li>
+                    <img src="./icons/Counter.svg" alt="circle">
+                    <li class="light-text">Back End Dev</li>
+                    <img src="./icons/Counter.svg" alt="circle">
+                    <li class="light-text">2023</li>
+                </ul>               
+                    <p class="description" >A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="pro-lang">
+                    <li class="lang">HTML</li>
+                    <li class="lang">CSS</li>
+                    <li class="lang">Javascipt</li>
+                </ul>
+                <div class="action">
+                    <button class="see-project">See Project</button>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./icons/Snapshoot Portfolio 2.svg" alt="portfolio" class="snapshot-portfoio">
+            <div class="left-block">
+                <h1 class="project-title">Tonic</h1>
+                <ul class="project-detail">
+                    <li>CANOPY</li>
+                    <img src="./icons/Counter.svg" alt="circle">
+                    <li class="light-text">Back End Dev</li>
+                    <img src="./icons/Counter.svg" alt="circle">
+                    <li class="light-text">2023</li>
+                </ul>               
+                    <p class="description" >A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="pro-lang">
+                    <li class="lang">HTML</li>
+                    <li class="lang">CSS</li>
+                    <li class="lang">Javascipt</li>
+                </ul>
+                <div class="action">
+                    <button class="see-project">See Project</button>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./icons/Snapshoot Portfolio 3.svg" alt="portfolio" class="snapshot-portfoio">
+            <div class="left-block">
+                <h1 class="project-title">Tonic</h1>
+                <ul class="project-detail">
+                    <li>CANOPY</li>
+                    <img src="./icons/Counter.svg" alt="circle">
+                    <li class="light-text">Back End Dev</li>
+                    <img src="./icons/Counter.svg" alt="circle">
+                    <li class="light-text">2023</li>
+                </ul>               
+                    <p class="description" >A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="pro-lang">
+                    <li class="lang">HTML</li>
+                    <li class="lang">CSS</li>
+                    <li class="lang">Javascipt</li>
+                </ul>
+                <div class="action">
+                    <button class="see-project">See Project</button>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./icons/Snapshoot Portfolio 4.svg" alt="portfolio" class="snapshot-portfoio">
+            <div class="left-block">
+                <h1 class="project-title">Tonic</h1>
+                <ul class="project-detail">
+                    <li>CANOPY</li>
+                    <img src="./icons/Counter.svg" alt="circle">
+                    <li class="light-text">Back End Dev</li>
+                    <img src="./icons/Counter.svg" alt="circle">
+                    <li class="light-text">2023</li>
+                </ul>               
+                    <p class="description" >A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <ul class="pro-lang">
+                    <li class="lang">HTML</li>
+                    <li class="lang">CSS</li>
+                    <li class="lang">Javascipt</li>
+                </ul>
+                <div class="action">
+                    <button class="see-project">See Project</button>
+                </div>
+            </div>
+        </div>
+        <div class="aboutmyself">
+            <h1 class="about-head">About Myself</h1>
+            <h6 class="about-description" >Hello I'm a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</h6>
+            <div class="social-media">
+                <h4 class="lets-connect">LET'S CONNECT</h4>
+            </div> 
+            <img src="./icons/Social media.svg" alt="Social Media Icons" class="social-media">
+            <button class="resume" href="#">Get my Resume</button>
+            <div class = "skills">
+                <div class="skills-heading">
+                    <h3>Languages</h3>
+                    <img src="./icons/down arrow.svg"  alt="arrow">
+                </div>
+                    <ul class="langs">
+                    <li><img src="./icons/java script.svg" alt="Javascript"><h4>JavaScript</h4></li>
+                    <li><img src="./icons/html.svg" alt="Javascript"><h4>HTML</h4></li>
+                    <li><img src="./icons/css.svg" alt="Javascript"><h4>CSS</h4></li>
+                    </ul>
+                <div class="skills-heading border">
+                    <h3>Frameworks </h3>
+                    <img src="./icons/right arrow.svg" alt="arrow">
+                </div>
+                <div class="skills-heading margin border">
+                <h3>Skills </h3> 
+                <img src="./icons/right arrow.svg" alt="arrow">
+                </div>
+            </div>
+        </div>    
+    </section>
 </body>
 </html>
