--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="card">
             <img src="./icons/Snapshoot Portfolio 2.svg" alt="portfolio" class="snapshot-portfoio">
             <div class="left-block">
-                <h1 class="project-title">Tonic</h1>
+                <h1 class="project-title">Multi-Post<br>Stories</h1>
                 <ul class="project-detail">
                     <li>CANOPY</li>
                     <img src="./icons/Counter.svg" alt="circle">
@@ -98,7 +98,7 @@
         <div class="card">
             <img src="./icons/Snapshoot Portfolio 4.svg" alt="portfolio" class="snapshot-portfoio">
             <div class="left-block">
-                <h1 class="project-title">Tonic</h1>
+                <h1 class="project-title">Multi-Post<br>Stories</h1>
                 <ul class="project-detail">
                     <li>CANOPY</li>
                     <img src="./icons/Counter.svg" alt="circle">
