--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                     If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it!
                 </p>
                 <form class="form-spree" action="https://formspree.io/f/xleyodbz" method="post">
-                    <textarea name="email" class="email" placeholder="Enter your email here..." maxlength="" required></textarea>
-                    <textarea name="full-name" class="email" placeholder="Enter your Name here..." maxlength="30" required></textarea>
+                    <input type="text" name="email" class="email" placeholder="Enter your email here..." maxlength="" required></input>
+                    <input type="text" name="full-name" class="email" placeholder="Enter your Name here..." maxlength="30" required></input>
                     <textarea name="message" class="message" placeholder="Write your message here..." maxlength="500" required></textarea>
                     <div class="FreeButton">
                         <button type="button" class="NormalBtn SpecifiedBtnSeeDetails">See Project</button>
