--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <img src="./icons/Icon - Menu.svg" alt="Button" class="button">
         </div>
         <ul class="navigation-links mobile-hide">
-            <li class="Nav-link"><a href="#">Portfolio</a></li>
-            <li class="Nav-link"><a href="#">About</a></li>
-            <li class="Nav-link"><a href="#">Contacts</a></li>
+            <li class="Nav-link"><a href="#worksection">Portfolio</a></li>
+            <li class="Nav-link"><a href="#myself">About</a></li>
+            <li class="Nav-link"><a href="#contact-me">Contacts</a></li>
         </ul>
     </div>
     <div class="headline">
@@ -33,7 +33,7 @@
             </div>
         <img src="./icons/social media icons.svg" alt="Social Media Icons" class="social-media-icons">
     </div> 
-    <section class="work-section">
+    <section id="worksection" class="work-section">
         <div class="card">
             <img src="./icons/Snapshoot Portfolio.svg" alt="portfolio" class="snapshot-portfolio desktop-hide">
             <img src="./icons/desktop card 1.png" alt="portfolio" class="snapshot-portfolio-desk mobile-hide"> 
@@ -140,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div class="aboutmyself">
+        <div id="myself" class="aboutmyself">
             <div class="about-myself-top"> 
                     <h1 class="about-head">About Myself</h1>
                     <h6 class="about-description" >Hello I'm a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</h6>
@@ -170,7 +170,7 @@
                     </div>
                 </div>
         </div>
-        <section class="ContactMe">
+        <section id="contact-me" class="ContactMe">
             <section class="ContactMeTop">
                 <p class="ContactMeTopText">Contact Me</p>
                 <p class="ContactMeDetails">
